// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubtractionToolbar /> should not render create button when [canModify=false] 1`] = `
<Toolbar>
  <SearchInput
    onChange={[MockFunction]}
    placeholder="Name"
    value="foo"
  />
</Toolbar>
`;

exports[`<SubtractionToolbar /> should render create button when [canModify=true] 1`] = `
<Toolbar>
  <SearchInput
    onChange={[MockFunction]}
    placeholder="Name"
    value="foo"
  />
  <LinkButton
    to={
      Object {
        "state": Object {
          "createSubtraction": true,
        },
      }
    }
  >
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="plus-square"
      tip="Create"
    />
  </LinkButton>
</Toolbar>
`;
